--- a/Sistema de Cadastro/Views/Contact/Index.cshtml
+++ b/Sistema de Cadastro/Views/Contact/Index.cshtml
@@ -31,7 +31,7 @@
     <p>Contacts Control System.</p>
 </div>
 
-<table class="table">
+<table class="table" id="table-contacts">
     <thead>
         <tr>
             <th scope="col">#</th>
