Feat: Adicionando funcionalidade para editar usuarios

--- a/Sistema de Cadastro/Views/User/Edit.cshtml
+++ b/Sistema de Cadastro/Views/User/Edit.cshtml
@@ -2,14 +2,15 @@
 @using Sistema_de_Cadastro.Enums;
 
 @{
-    ViewData["Title"] = "Add User";
+    ViewData["Title"] = "Edit User";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Add New User</h1>
+    <h1 class="display-4">Edit User</h1>
 </div>
 
-<form asp-controller="User" asp-action="Create" method="post">
+<form asp-controller="User" asp-action="Change" method="post">
+    <input type="hidden" asp-for="Id" />
     <div class="form-group">
         <label for="name">Name</label>
         <input type="text" asp-for="Name" name="Name" class="form-control" placeholder="Enter name"/>
@@ -36,12 +37,6 @@
             <option value="@ProfileEnum.Standard">Standard</option>
         </select>
         @Html.ValidationMessageFor(passed_user => passed_user.profile)
-    </div>
-
-    <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" asp-for="Password" name="Password" class="form-control" placeholder="Enter password" />
-        @Html.ValidationMessageFor(passed_user => passed_user.Password)
     </div>
 
     <br />
