--- a/Sistema de Cadastro/Views/User/Index.cshtml
+++ b/Sistema de Cadastro/Views/User/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<UserModel>
+@using Sistema_de_Cadastro.Enums;
 @{
     ViewData["Title"] = "List of Users";
 }
@@ -38,6 +39,7 @@
             <th scope="col">Name</th>
             <th scope="col">Login</th>
             <th scope="col">Email</th>
+            <th scope="col">Profile</th>
             <th scope="col">Created Date</th>
             <th scope="col"></th>
         </tr>
@@ -52,6 +54,7 @@
                     <td>@user.Name</td>
                     <td>@user.Login</td>
                     <td>@user.Email</td>
+                    <td>@(user.profile == ProfileEnum.Admin ? "Admin":"Standard")</td>
                     <td>@user.CreatedDate</td>
                     <td>
                         <a role="button" class="btn btn-outline-primary" asp-route-id="@user.Id" asp-controller="User" asp-action="Edit">Edit</a>
